fixed error with not showing the unflipped card when en->ch direction chosen

--- a/styles.css
+++ b/styles.css
@@ -285,10 +285,6 @@ h2 {
     visibility: hidden;
 }
 
-#card-english:not(.flipped).direction-en-ch {
-    visibility: hidden;
-}
-
 /* Card buttons */
 #card-buttons {
     display: none;
